--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="MooFresh Farm - Your daily farm-fresh dairy delivery service. Get pasture-raised milk and dairy products delivered straight from our cows to your door!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>🐄 MooFresh Farm - Farm Fresh Dairy Delivery</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
